--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 @import url("./rodape.css");
 @import url("./principal-formulario.css");
 @import url("./formulario.css");
-
+@import url("./animais.css");
+@import url("./cards.css");
 
 :root{
   --azul-primaria: #3772FF;
@@ -29,7 +30,7 @@
 
 body{
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   font-family: var(--fonte-principal);
   font-size: 1.6rem;
   font-weight: 400;
